--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   # Utility
   shared_preferences: ^2.2.3 # To save the user's theme choice
   intl: ^0.19.0 # For formatting dates (e.g., in the Planner)
+  table_calendar: ^3.1.3
 
 dev_dependencies:
   flutter_test:
